examples/nginx-ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-test
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/acme-http01-edit-in-place: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - nginx-test.k8s.skookum.com
    secretName: nginx-test.k8s.skookum.com
  rules:
  - host: nginx-test.k8s.skookum.com
    http:
      paths:
      - backend:
          serviceName: http-svc
          servicePort: 80
